# barcodes

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  codes.rs  data.rs  main.rs  types.rs
