[package]
name = "barcodes"
authors = ["Blossomi Shymae"]
description = "Print your pride in the terminal!"
repository = "https://github.com/BlossomiShymae/barcodes"
license = "GPL-3.0-only"

keywords = ["terminal", "cli", "pride", "lgbt"]
categories = ["command-line-utilities"]

version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colorful = "0.2.2"
rand = "0.8.5"
termsize = "0.1.6"
